# fingerprint_parallel

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Img.hpp  ImgStatics.cpp  ImgStatics.hpp  ImgTransform.cpp  ImgTransform.hpp  Makefile  MatrixBuffer.hpp  MinutiaeDetector.cpp  MinutiaeDetector.hpp  OclException.cpp  OclException.hpp  OclInfo.cpp  OclInfo.hpp  README.md  main.cpp  main.hpp  statics.cl  transform.cl
.github/workflows/: build.yml
cmake/: OclToCpp.cmake
core/: CMakeLists.txt  Img.hpp  ImgStatics.cpp  ImgStatics.hpp  ImgTransform.cpp  ImgTransform.hpp  MatrixBuffer.cpp  MatrixBuffer.hpp  MinutiaeDetector.cpp  MinutiaeDetector.hpp  OclException.cpp  OclException.hpp  OclInfo.hpp  ScalarBuffer.hpp  logger.hpp
core/opencl/: statics.cl  transform.cl
driver/: CMakeLists.txt  main.cpp  main.hpp
test/: CMakeLists.txt  img_statics_test.cpp  kernel_test.cpp  minutiae_extract_test.cpp  random_case_generator.hpp  reduction_alg_time_test.cpp
